# myGL

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Config.h.in  Doxyfile  Makefile  MyGL.cpp  MyGL.hpp  README  Vagrantfile  bootstrap.sh  configure.ac  context.cpp  context.hpp  deps  deps.sh  draw.cpp  draw.hpp  fragmentShader.glsl  functionPointerTest.cpp  get-libpng  headers_may_include.txt  key_callback_mods.txt  log.txt  main.cpp  myGL.hpp  notes  omfg-magic-correct-order-of-linking  plot.c  plot.cpp  plot.h  plot.hpp  readme  screenshot  shape.hpp  structure.txt  tags  todo  travis-script.sh  (+5 more)
boostTest/: run  thread.cpp
cmakeModules/: LICENSE-2.0
doc/: doxygen_sqlite3.db
doc/html/: MyGL_8hpp_source.html  annotated.html  classComposer-members.html  classComposer.html  classComposer__coll__graph.map  classComposer__coll__graph.md5  classComposer__inherit__graph.map  classComposer__inherit__graph.md5  classContext-members.html  classContext.html  classContext__coll__graph.map  classContext__coll__graph.md5  classContext__inherit__graph.map  classContext__inherit__graph.md5  classCursorMovement-members.html  classCursorMovement.html  classCursorMovement__coll__graph.md5  classCursorMovement__inherit__graph.map  classCursorMovement__inherit__graph.md5  classInput.html  classInput__inherit__graph.map  classInput__inherit__graph.md5  classKey-members.html  classKey.html  classKey__coll__graph.map  classKey__coll__graph.md5  classKey__inherit__graph.md5  classLine-members.html  classLine.html  classLine__coll__graph.map  classLine__coll__graph.md5  classLine__inherit__graph.md5  classMouseButton-members.html  classMouseButton.html  classMouseButton__coll__graph.map  classMouseButton__coll__graph.md5  classMouseButton__inherit__graph.md5  classMyGL-members.html  classMyGL.html  classMyGL__coll__graph.map  (+72 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  classComposer.eps  classComposer.tex  classComposer__coll__graph.md5  classComposer__inherit__graph.md5  classContext.eps  classContext.tex  classContext__coll__graph.md5  classContext__inherit__graph.md5  classCursorMovement.eps  classCursorMovement.tex  classCursorMovement__coll__graph.md5  classCursorMovement__inherit__graph.md5  classInput.eps  classInput.tex  classInput__inherit__graph.md5  classKey.eps  classKey.tex  classKey__coll__graph.md5  classKey__inherit__graph.md5  classLine.tex  classLine__coll__graph.md5  classLine__inherit__graph.md5  classMouseButton.eps  classMouseButton.tex  classMouseButton__coll__graph.md5  classMouseButton__inherit__graph.md5  classMyGL.tex  classMyGL__coll__graph.md5  classPNG.tex  classRectangle.tex  classRectangle__coll__graph.md5  classRectangle__inherit__graph.md5  classShaderProgram.tex  classShaderProgram__inherit__graph.md5  classShaderTextured.tex  classShaderTextured__coll__graph.md5  classShaderTextured__inherit__graph.md5  classShape.eps  classShape.tex  (+12 more)
include/: MyGL.hpp  mygl.hpp  shader.hpp
scripts/: deps.sh  five.sh  four.sh  one.sh  six.sh  three.sh  two.sh
src/: .ycm_extra_conf.py  Makefile  Makefile.am  MyGL.cpp  MyGL.hpp  compile.sh  data  fragmentShader.glsl  main.cpp  mygl.cpp  shader.cpp  tags  vertexShader.glsl
test/: .ycm_extra_conf.py  Makefile  a.out  async.cpp  brad.txt  clock.cpp  glm-swizzle.cpp  list-destructor.cpp  object-implicit-constructor.cpp  rand.cpp  tags  thing.cpp  thread-object-destruction.cpp  thread-object-sync.cpp  unique-ptr-to-thread-custom-delete.cpp
test/boostTest/: a.out  dirIter.cpp  thread.cpp
test/glad/: glad.c  glad.cpp
test/glfw/: xbox-controller.cpp
test/magick/: histogram.cpp  read-and-display.cpp
test/opencv/: playVideo.cpp  video.cpp  windowdemo.cpp
